# local-engine-router

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  STATUS.md  config.example.yaml  config.schema.json  docker-compose.yml  install.sh  pyproject.toml  requirements.txt  routerctl
.github/workflows/: ci.yml  docker-publish.yml  pypi-publish.yml
deploy/: install.sh  llm-router.service  local-engine-router.service  opencode.snippet.md  openwebui-wiring.md  smoke_test.sh
presets/: README.md  koboldcpp.yaml  llamacpp.yaml  lmstudio.yaml  localai.yaml  max.yaml  mlx.yaml  ollama.yaml  ramalama.yaml  sglang.yaml  tabbyapi.yaml  validate_presets.py  vllm.yaml
roadmap/: ROADMAP-v0.3-engine-coverage.md  ROADMAP.md
router/: __init__.py  __main__.py  app.py  cli.py  config.py  engines.py  metrics.py  proxy.py  sysmem.py  wizard.py
tests/: conftest.py  test_app_integration.py  test_cli.py  test_config.py  test_engine_coverage.py  test_install_sh.py  test_metrics.py  test_platform.py  test_proxy.py  test_routing.py  test_swap_state_machine.py  test_thinking_policy.py  test_wizard.py
