[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "local-engine-router"
# Kept in sync with router/__init__.__version__ and CHANGELOG.md. 0.x channel.
version = "0.2.0"
description = "A single-port OpenAI- and Ollama-compatible reverse proxy that swaps the GPU between local LLM engines on demand."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "rxxusp" }]

# The router itself is pure Python and uses no GPU — it only proxies to the
# local engines. pydantic is NOT a dependency (config is plain dataclasses) and
# prometheus_client is NOT a dependency (metrics exposition is hand-rolled).
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://github.com/rxxusp/local-engine-router"
Repository = "https://github.com/rxxusp/local-engine-router"

[project.scripts]
llm-router = "router.__main__:main"
routerctl = "router.cli:main"

[tool.setuptools]
# Ship the router package only (no config JSON, no top-level scripts/tests).
packages = ["router"]
